--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,7 @@
+[user]
+	email = john.danger.xia@gmail.com
+	name = John Xia
+
 [push]
 	default = simple
 
@@ -19,3 +23,6 @@ prune-branches = !git remote prune origin && git branch -vv | grep ': gone]' | a
 
 [include]
 	path = ~/.gitconfig.secret
+
+[help]
+    autocorrect = -1
