--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "vimplugins/ack.vim"]
 	path = vimplugins/ack.vim
 	url = https://github.com/mileszs/ack.vim
+[submodule "vimplugins/notational-fzf-vim"]
+	path = vimplugins/notational-fzf-vim
+	url = https://github.com/alok/notational-fzf-vim.git
