--- a/.i3/.i3statusconfig
+++ b/.i3/.i3statusconfig
@@ -6,7 +6,7 @@ general {
 
 order += "volume master"
 order += "battery 0"
-order += "wireless wlp2s0"
+order += "wireless wlp0s20f3"
 order += "tztime local"
 
 volume master {
@@ -17,7 +17,7 @@ volume master {
         mixer_idx = 0
 }
 
-wireless wlp2s0 {
+wireless wlp0s20f3 {
         format_up = "W: (%quality at %essid)"
         format_down = "W: down"
 }
