--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,9 @@
-unbind C-b
-set-option -g prefix M-space
-bind M-space send-prefix
+set-option -sg escape-time 10
+set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
+
+set-window-option -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
