--- a/.i3/config
+++ b/.i3/config
@@ -31,7 +31,7 @@ bindsym Print exec --no-startup-id GRIM_DEFAULT_DIR=~/img grim
 # kill focused window
 bindsym $mod+Shift+c kill
 
-bindsym $mod+space exec wofi --show drun
+bindsym $mod+space exec wofi -S drun -b -c ~/.config/wofi/config
 
 # change focus
 bindsym $mod+h focus left
