Update hx configs esp for ruby

--- a/config.toml
+++ b/config.toml
@@ -1,1 +1,10 @@
-theme = "spacebones_light"
+theme = "monokai_pro"
+
+[editor]
+line-number = "relative"
+auto-save = true
+
+[editor.cursor-shape]
+insert = "bar"
+normal = "block"
+select = "underline"
