--- a/tmux.conf
+++ b/tmux.conf
@@ -6,3 +6,5 @@ bind l select-pane -R
 set -s escape-time 0
 set -g default-command /opt/homebrew/bin/fish
 set -g default-shell /opt/homebrew/bin/fish
+
+set-option -g history-limit 100000
